--- a/index.html
+++ b/index.html
@@ -1,23 +1,331 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Home</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <!--
-      Need a visual blank slate?
-      Remove all code in `styles.css`!
-    -->
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
-  </head>
-  <body>
-    <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
-    </nav>
-    <main>
-      <h1>Home page</h1>
-    </main>
-  </body>
-</html>
+  <style>
+    /* Global Styles */
+    body { font-family: 'Noto Sans KR', sans-serif; line-height: 1.8; margin: 0; padding: 0; color: #333; background-color: #f8f9fa; }
+    header, section, footer { padding: 30px; max-width: 1000px; margin: auto; }
+    h1, h2, h3, h4 { color: #0056b3; line-height: 1.4; }
+    h1 { font-size: 2.5em; text-align: center; margin-bottom: 10px; }
+    h2 { font-size: 2em; border-bottom: 2px solid #e0e0e0; padding-bottom: 10px; margin-top: 40px; }
+    h3 { font-size: 1.5em; margin-top: 30px; color: #2a6496; }
+    p { margin-bottom: 15px; text-align: justify; }
+    ul, ol { margin-bottom: 15px; padding-left: 25px; }
+    li { margin-bottom: 8px; line-height: 1.6; }
+
+    /* Header Section */
+    header { background-color: #ffffff; text-align: center; padding: 50px 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.05); }
+    header p { color: #666; font-size: 1.1em; }
+
+    /* CTA Button */
+    .cta-btn {
+      display: inline-block;
+      padding: 18px 35px;
+      background-color: #ff5722; /* Warm, soft orange for call to action */
+      color: #fff;
+      font-size: 20px;
+      font-weight: bold;
+      border-radius: 10px;
+      text-decoration: none;
+      margin-top: 25px;
+      transition: background 0.3s ease, transform 0.3s ease;
+      box-shadow: 0 4px 10px rgba(255, 87, 34, 0.4);
+    }
+    .cta-btn:hover { background-color: #e64a19; transform: translateY(-2px); }
+
+    /* Content Sections */
+    section { background-color: #ffffff; padding: 30px; margin-top: 20px; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.03); }
+    section#estimate { background-color: #e9ecef; border: 1px dashed #ced4da; }
+    section.light-bg { background-color: #f4f7f6; } /* Soft background color for contrast */
+
+    /* Tables */
+    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+    th, td { border: 1px solid #ddd; padding: 12px; text-align: left; background-color: #fff; }
+    th { background-color: #f1f1f1; font-weight: bold; color: #333; }
+    tr:nth-child(even) td { background-color: #fcfcfc; }
+
+    /* Form Styles */
+    .form-group { margin-bottom: 20px; }
+    .form-group label { display: block; font-weight: bold; margin-bottom: 8px; color: #555; }
+    .form-group input, .form-group select, .form-group textarea {
+      width: calc(100% - 24px); /* Full width minus padding */
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 1em;
+      box-sizing: border-box; /* Include padding/border in element's total width and height */
+    }
+    .form-step { border: 1px solid #eee; padding: 25px; border-radius: 8px; margin-bottom: 20px; background-color: #ffffff; }
+    .form-step h4 { color: #007bff; border-bottom: 1px solid #e0e0e0; padding-bottom: 10px; margin-top: 0; }
+
+    /* Info Boxes/Blockquotes */
+    blockquote { font-style: italic; border-left: 4px solid #0056b3; margin: 20px 0; padding-left: 20px; background-color: #f9f9f9; padding: 15px; border-radius: 6px; }
+    .info-box { background-color: #e6f7ff; padding: 20px; border-left: 5px solid #007bff; margin-top: 20px; border-radius: 6px; }
+
+    /* Footer */
+    footer { background-color: #333; color: #fff; text-align: center; padding: 25px; font-size: 14px; margin-top: 30px; }
+    footer a { color: #ffeb3b; text-decoration: none; }
+
+    /* Visual Graph (for data representation) */
+    .chart-container { display: flex; flex-direction: column; align-items: center; margin-top: 20px; }
+    .chart-bar { background-color: #007bff; height: 30px; margin-bottom: 10px; color: #fff; text-align: center; line-height: 30px; border-radius: 4px; font-size: 0.9em; position: relative; }
+    .chart-label { width: 100px; text-align: right; margin-right: 10px; font-weight: bold; font-size: 0.9em; color: #555; }
+    .chart-row { display: flex; align-items: center; width: 80%; }
+    /* Responsive adjustment */
+    @media (max-width: 768px) {
+      header, section, footer { padding: 20px 15px; }
+      h1 { font-size: 2em; }
+      .cta-btn { font-size: 18px; padding: 15px 30px; }
+    }
+  </style>
+
+  <!-- Schema Markup -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "MovingCompany",
+    "name": "전국 포장이사 무료견적센터",
+    "url": "https://example.com",
+    "logo": "https://example.com/logo.png",
+    "description": "2026년 최신 포장이사 비용을 실시간으로 비교하고, 전국 어디든 무료 견적을 받을 수 있는 서비스입니다. 안전하고 신뢰할 수 있는 이사업체들을 지금 바로 만나보세요.",
+    "telephone": "1661-1234",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "대한민국",
+      "addressRegion": "전국",
+      "streetAddress": "전국 서비스 가능"
+    },
+    "serviceType": ["포장이사", "보관이사", "원룸이사", "사무실이사", "해외이사", "반포장이사"]
+  }
+  </script>
+</head>
+<body>
+  <header>
+    <h1>포장이사 무료견적 비교 플랫폼 | 2026년 최신 비용 분석</h1>
+    <p>투명한 이사 비용 산정 기준, 검증된 이사업체 네트워크, 실시간 견적 비교까지 한 번에!</p>
+    <a href="#quote-request" class="cta-btn">📞 실시간 무료견적 요청하기</a>
+  </header>
+
+  <section id="why-estimate" class="light-bg">
+    <h2>이사무료견적, 왜 중요할까요?</h2>
+    <p>이사 견적은 단순한 비용 산정이 아닙니다. 이사 서비스의 품질, 추가 서비스 포함 여부, 업체 신뢰도 등을 종합적으로 판단하는 기준입니다. 특히 2026년 이사 시장은 인건비 상승과 물류 변화로 인해 변동성이 커지고 있어, 이사무료견적 비교는 합리적인 소비의 필수 과정이 되었습니다. 고객님께서는 짐의 양, 이사 거리, 작업 환경, 계절적 요인 등 복합적인 요소를 고려하여 최적의 견적을 받아보셔야 합니다.</p>
+    <blockquote>"이사 비용은 업체마다 최대 30%까지 차이가 날 수 있습니다. 신뢰성 있는 견적 비교를 통해 불필요한 비용을 절감하세요."</blockquote>
+  </section>
+
+  <section id="service-types">
+    <h2>주요 이사 서비스별 견적 기준</h2>
+    <p>포장이사, 보관이사, 원룸이사, 사무실이사 등 이사 유형별로 견적 산정 방식이 다릅니다. 이사무료견적을 정확히 받으려면 자신의 상황에 맞는 서비스를 선택하는 것이 중요합니다.</p>
+
+    <div class="info-box">
+      <h3>포장이사 견적 (가장 일반적인 형태)</h3>
+      <p>가장 많이 찾는 서비스로, 포장부터 운송, 정리, 청소까지 모든 과정을 업체가 전담합니다. 짐의 양(평수)과 투입 인원수가 견적에 큰 영향을 미치며, 짐 정리 수준에 따라 '프리미엄 포장이사'와 '일반 포장이사'로 나뉩니다. 2026년 기준, 포장이사 평균 견적은 1톤 기준 30만원대, 5톤 기준 150만원대부터 시작합니다.</p>
+      <ul>
+        <li>짐량 산정: 짐의 부피(평수 또는 가구 수)를 기준으로 톤수를 계산합니다.</li>
+        <li>작업 환경: 사다리차 이용 유무, 엘리베이터 유무, 층수에 따라 비용이 추가됩니다.</li>
+        <li>추가 서비스: 에어컨 설치/분해, 벽걸이 TV 설치, 피아노 운반 등 특수 짐 처리는 별도 비용이 발생합니다.</li>
+      </ul>
+    </div>
+
+    <div class="info-box">
+      <h3>원룸이사 견적 (1~2인 가구 최적화)</h3>
+      <p>원룸이사 견적은 일반 포장이사와 달리 짐량이 적어 '반포장이사' 형태로 진행되기도 합니다. 1인 가구는 짐 정리 부담이 덜하므로 비용 절감을 위해 일부 짐을 스스로 포장하는 반포장이사를 선택하는 경우가 많습니다. 2026년에는 '짐 지키미'와 같은 IoT 서비스를 활용하여 짐 보관 기간 동안 실시간 모니터링이 가능한 원룸 보관이사 서비스도 등장하고 있습니다.</p>
+    </div>
+
+    <div class="info-box">
+      <h3>보관이사 견적 (장기간 짐 보관)</h3>
+      <p>이사 날짜가 맞지 않거나 인테리어 공사 등으로 인해 짐을 잠시 보관해야 할 때 유용합니다. 견적은 '포장 비용 + 운송 비용 + 보관료(월 단위)'로 구성됩니다. 보관 환경(컨테이너, 일반 창고, 항온항습 창고)에 따라 비용이 천차만별이므로 짐의 종류에 따라 적합한 보관 업체를 선택해야 합니다.</p>
+    </div>
+
+  </section>
+
+  <section id="cost-analysis">
+    <h2>2026년 이사 비용 산정 기준 및 영향 요인 분석</h2>
+    <p>이사무료견적을 정확히 이해하기 위해 2026년 이사 시장의 주요 비용 산정 기준과 변동 요인을 상세히 분석합니다. 이사 견적은 단순히 짐량에 비례하지 않으며, 다음 5가지 핵심 요소에 의해 결정됩니다.</p>
+
+    <h3>1. 짐량 및 평수별 톤수 기준</h3>
+    <p>이사 견적의 기본이 되는 짐량은 평수와 가구 수에 따라 톤수로 환산됩니다. 짐량이 많을수록 투입되는 인원수와 차량 톤수가 증가하므로 비용이 비례합니다. 짐량을 정확히 파악하는 것이 무료견적 비교의 첫걸음입니다.</p>
+    <table>
+      <thead>
+        <tr>
+          <th>이사 형태</th>
+          <th>평균 짐량(톤수)</th>
+          <th>필요 인력(평균)</th>
+          <th>주요 서비스 대상</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>원룸이사</td>
+          <td>1톤 (1.5톤)</td>
+          <td>남성 1~2명</td>
+          <td>1인 가구, 오피스텔</td>
+        </tr>
+        <tr>
+          <td>투룸/빌라</td>
+          <td>2.5톤 (3톤)</td>
+          <td>남성 2명 + 여성 1명</td>
+          <td>신혼부부, 2~3인 가구</td>
+        </tr>
+        <tr>
+          <td>아파트(30평대)</td>
+          <td>5톤 (5톤)</td>
+          <td>남성 3명 + 여성 1~2명</td>
+          <td>3~4인 가구</td>
+        </tr>
+        <tr>
+          <td>대형 아파트(40평대~)</td>
+          <td>6~8톤</td>
+          <td>남성 4~5명 + 여성 2명</td>
+          <td>다인 가구, 짐이 많은 집</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <h3>2. 이사 날짜의 계절적 요인 및 '손 없는 날'</h3>
+    <p>이사 날짜는 견적에 가장 큰 영향을 미치는 요인 중 하나입니다. 특히 이사 수요가 많은 봄(3~4월)과 가을(9~10월), 그리고 '손 없는 날'은 이사 비용이 평일 대비 20%~50%까지 상승할 수 있습니다. 2026년의 손 없는 날을 미리 확인하고, 가능하다면 평일에 이사하는 것을 권장합니다.</p>
+    <div class="chart-container">
+      <h4>월별 이사 수요 집중도 (2026년 예측)</h4>
+      <div class="chart-row"><div class="chart-label">비수기 (1~2월)</div><div class="chart-bar" style="width: 30%;">수요 낮음</div></div>
+      <div class="chart-row"><div class="chart-label">성수기 시작 (3~4월)</div><div class="chart-bar" style="width: 75%; background-color: #28a745;">수요 높음</div></div>
+      <div class="chart-row"><div class="chart-label">여름 (5~8월)</div><div class="chart-bar" style="width: 50%;">수요 보통</div></div>
+      <div class="chart-row"><div class="chart-label">극성수기 (9~10월)</div><div class="chart-bar" style="width: 90%; background-color: #ffc107;">수요 매우 높음</div></div>
+      <div class="chart-row"><div class="chart-label">연말 (11~12월)</div><div class="chart-bar" style="width: 60%;">수요 보통</div></div>
+    </div>
+
+    <h3>3. 작업 환경(사다리차, 층수, 거리)</h3>
+    <p>이삿짐을 옮기는 작업 환경은 인건비와 장비 사용료를 결정합니다. 사다리차 이용은 기본 10만원부터 시작하며, 고층 아파트의 경우 사다리차 비용이 더 높습니다. 또한, 아파트 단지 내에서 엘리베이터 사용 가능 여부, 주차장과의 거리가 멀 경우 이사 견적이 달라질 수 있습니다.</p>
+
+    <h3>4. 추가 서비스 및 특수 품목</h3>
+    <p>에어컨 설치/분해, 벽걸이 TV 설치, 돌침대 운반, 피아노 운반, 고급 의류 포장 등 추가 인력이나 전문 기술이 필요한 품목은 별도 견적 대상입니다. 이사무료견적 요청 시 특수 품목 여부를 반드시 알려야 정확한 최종 견적을 받을 수 있습니다.</p>
+
+  </section>
+
+  <section id="regional-keywords">
+    <h2>전국 주요 지역별 이사무료견적 트렌드 (2026년)</h2>
+    <p>이사 수요와 시장 환경은 지역별로 큰 차이를 보입니다. 특히 수도권과 지방 대도시의 이사 견적은 짐량과 거리에 더해 지역 특성을 반영하여 산정됩니다. 다음은 전국 30개 이상의 주요 지역별 이사 트렌드입니다.</p>
+    <ul>
+      <li><strong>수도권 (서울, 경기, 인천):</strong> 인구 유입이 꾸준하여 이사 수요가 많습니다. 서울 포장이사 견적은 특히 도심 접근성이 높은 강남, 서초, 송파 지역이 높게 형성됩니다. 경기 지역(수원, 용인, 고양, 성남, 화성, 평택)은 신도시 입주 물량에 따라 변동성이 큽니다.</li>
+      <li><strong>충청권 (대전, 세종, 충남, 충북):</strong> 대전 포장이사 견적은 정부 기관 이전 수요로 인해 꾸준하며, 세종시 이사는 신규 아파트 입주 시기에 맞춰 견적을 비교하는 것이 중요합니다. 천안, 청주 지역은 산업 단지 근로자 수요가 높습니다.</li>
+      <li><strong>영남권 (부산, 대구, 울산, 경남):</strong> 부산 포장이사는 해운대, 수영구 등 해안가 지역의 수요가 높습니다. 대구 이사, 울산 이사는 제조업 경기와 연관되어 수요가 변화합니다. 경남 지역(창원, 김해, 양산)은 김해신공항 및 창원 산업단지 주변 이사 수요가 많습니다.</li>
+      <li><strong>호남권 (광주, 전남, 전북):</strong> 광주 포장이사 견적은 광산구, 서구 지역의 신도시 개발에 따라 증가하고 있습니다. 전주 이사, 순천 이사는 보관이사 수요가 많은 편입니다.</li>
+      <li><strong>기타 지역 (강원, 제주):</strong> 강릉, 속초 등 강원도 이사는 관광 수요와 전원주택 수요가 결합되어 특이한 시장 형태를 보입니다. 제주도 이사는 육지와의 운송 비용이 추가되어 견적 산정에 주의가 필요합니다.</li>
+    </ul>
+    <p><strong>주요 연관 검색어:</strong> 이사비용 계산기, 포장이사 잘하는 곳, 이사 견적 비교, 이사 짐량 측정, 반포장이사 비용, 이사 손 없는 날 2026, 이사 업체 순위, 이사 체크리스트.</p>
+    <p><strong>함께 많이 찾는 키워드:</strong> 용달이사, 이사 청소, 입주 청소, 벽걸이 TV 이전 설치, 에어컨 분해 청소, 이사짐 정리 대행.</p>
+  </section>
+
+  <section id="quote-request">
+    <h2>이사무료견적 요청 (견적 비교 플랫폼)</h2>
+    <p>아래 양식에 따라 정보를 입력하시면, 고객님의 조건에 맞는 여러 이사업체의 견적을 실시간으로 비교해드립니다. 입력란을 상세히 작성해 주시면 보다 정확한 견적을 받을 수 있습니다.</p>
+    <!-- Detailed Form for Dwell Time and Accurate Quote -->
+    <form class="multi-step-form" action="https://example.com/process-quote" method="POST">
+      <div class="form-step">
+        <h4>Step 1. 이사 기본 정보 입력</h4>
+        <div class="form-group">
+          <label for="move-date">이사 희망 날짜:</label>
+          <input type="date" id="move-date" name="move-date" required>
+        </div>
+        <div class="form-group">
+          <label for="move-type">이사 종류 선택:</label>
+          <select id="move-type" name="move-type" required>
+            <option value="">이사 종류 선택</option>
+            <option value="packing">포장이사</option>
+            <option value="half-packing">반포장이사</option>
+            <option value="storage">보관이사</option>
+            <option value="studio">원룸이사</option>
+            <option value="office">사무실이사</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="phone">연락처:</label>
+          <input type="tel" id="phone" name="phone" placeholder="010-xxxx-xxxx" required>
+        </div>
+      </div>
+
+      <div class="form-step">
+        <h4>Step 2. 출발지 및 도착지 주소 정보</h4>
+        <div class="form-group">
+          <label for="departure-address">출발지 주소 (시/구):</label>
+          <input type="text" id="departure-address" name="departure-address" placeholder="예: 서울특별시 강남구" required>
+        </div>
+        <div class="form-group">
+          <label for="departure-floor">출발지 층수:</label>
+          <input type="number" id="departure-floor" name="departure-floor" placeholder="예: 5층 (엘리베이터 유무 필수 기재)" required>
+        </div>
+        <div class="form-group">
+          <label for="arrival-address">도착지 주소 (시/구):</label>
+          <input type="text" id="arrival-address" name="arrival-address" placeholder="예: 경기도 성남시 분당구" required>
+        </div>
+        <div class="form-group">
+          <label for="arrival-floor">도착지 층수:</label>
+          <input type="number" id="arrival-floor" name="arrival-floor" placeholder="예: 12층" required>
+        </div>
+      </div>
+
+      <div class="form-step">
+        <h4>Step 3. 이삿짐 규모 및 특이사항 (정확한 견적을 위해 필수)</h4>
+        <div class="form-group">
+          <label for="house-type">이사 형태 (평수):</label>
+          <select id="house-type" name="house-type" required>
+            <option value="">평수/가구원 선택</option>
+            <option value="1room">원룸 (10평 미만)</option>
+            <option value="2room">투룸/빌라 (10~20평)</option>
+            <option value="3room">아파트/주택 (30평대)</option>
+            <option value="4room">아파트/주택 (40평 이상)</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="special-items">특수 짐 목록 (선택 사항):</label>
+          <textarea id="special-items" name="special-items" rows="4" placeholder="에어컨, 벽걸이 TV, 피아노, 돌침대, 고가 미술품 등 특이사항 기재"></textarea>
+        </div>
+        <div class="form-group">
+          <input type="checkbox" id="ladder-needed" name="ladder-needed">
+          <label for="ladder-needed">사다리차 사용 가능 여부 확인</label>
+        </div>
+        <div class="form-group">
+          <input type="checkbox" id="packing-service" name="packing-service">
+          <label for="packing-service">추가 청소 서비스 필요 여부</label>
+        </div>
+      </div>
+      <button type="submit" class="cta-btn">견적 요청서 제출</button>
+    </form>
+  </section>
+
+  <section id="faq">
+    <h2>자주 묻는 질문 (FAQ)</h2>
+    <h3>Q1. 이사무료견적을 받으려면 방문 견적이 필수인가요?</h3>
+    <p>네, 정확한 견적 산정을 위해서는 방문 견적이 필수적입니다. 전화나 온라인 견적은 짐량을 어림잡아 산정하므로 실제 이사 당일 비용이 달라지는 경우가 많습니다. 방문 견적을 통해 짐의 부피, 파손 위험 물품, 작업 동선 등을 꼼꼼히 확인하여 정확한 견적을 받아보셔야 합니다. 방문 견적 시에는 계약서에 추가 비용 발생 항목을 명확히 기재해야 합니다.</p>
+
+    <h3>Q2. 2026년 이사 비용은 작년 대비 얼마나 올랐나요?</h3>
+    <p>2026년에는 최저임금 상승과 유류비 변동으로 인해 인건비와 운송비가 소폭 상승했습니다. 특히 이사 성수기(3~4월, 9~10월)에는 수요 집중으로 인해 평소 대비 비용이 높게 형성될 수 있습니다. 비수기 이사를 선택하거나 평일 이사를 통해 비용을 절감하는 것이 좋습니다.</p>
+
+    <h3>Q3. 이사 업체 선정 시 주의해야 할 점은 무엇인가요?</h3>
+    <p>이사 업체 선정 시에는 '이사화물 주선업 허가증' 보유 여부를 확인해야 합니다. 무허가 업체는 피하는 것이 좋습니다. 또한, 계약서에 피해보상 범위와 추가 비용 발생 여부를 명확히 명시하고, 구두 계약은 반드시 피해야 합니다. <a href="https://www.consumer.go.kr/main/index.do" target="_blank">한국소비자원(KCA)</a>의 피해 구제 사례를 참고하여 신뢰성 있는 업체를 선택하세요. 이사 당일 이사 업체가 계약서에 명시된 인력 및 차량을 투입하는지 꼼꼼하게 확인하는 것도 중요합니다.</p>
+
+    <h3>Q4. 보관이사 시 짐 보관 기간 동안 보험 적용이 되나요?</h3>
+    <p>대부분의 보관이사는 운송 중뿐만 아니라 보관 기간 동안에도 화재나 도난에 대비하여 보험에 가입됩니다. 하지만 보관료에 보험료가 포함되는지, 어떤 종류의 손해에 대해 보상하는지 계약 시 반드시 확인해야 합니다. 보관이사가 처음이라면 <a href="https://www.gov.kr/main?a=SvcLinkSearch&searchNm=%EC%9D%B4%EC%82%AC%EC%97%85%EC%B2%B4" target="_blank">정부24</a> 등 공공기관 자료를 통해 보관이사 표준 약관을 숙지하는 것이 좋습니다.</p>
+  </section>
+
+  <section id="trust-reviews">
+    <h2>고객 후기 및 신뢰도 확보</h2>
+    <p>저희 견적 플랫폼을 통해 이사를 진행하신 고객님들의 실제 후기입니다. 저희는 투명한 견적 비교와 검증된 업체만을 추천합니다.</p>
+    <blockquote>"인테리어 공사 때문에 보관이사가 필요했는데, 여러 업체의 견적을 쉽게 비교할 수 있었습니다. 짐 보관 상태도 만족스러웠습니다." – 이OO (대전 거주)</blockquote>
+    <blockquote>"2026년 이사 예정이라 미리 견적을 알아봤는데, 짐량에 따른 상세한 비용 안내가 도움이 되었습니다. 서울에서 부산으로 이사하는 거라 걱정했는데 잘 끝냈습니다." – 김OO (서울 거주)</blockquote>
+    <blockquote>"급하게 원룸이사를 해야 했는데, 견적 요청 후 1시간 만에 여러 업체 견적을 받아볼 수 있었습니다. 덕분에 합리적인 가격으로 이사할 수 있었습니다." – 박OO (경기 수원 거주)</blockquote>
+  </section>
+
+  <section id="links" class="light-bg">
+    <h2>이사 관련 정보 참고 사이트</h2>
+    <p>이사 관련 법규 및 정보, 소비자가 알아야 할 사항은 다음과 같은 공신력 있는 외부 사이트를 참고하여 확인하세요.</p>
+    <ul>
+      <li><a href="https://www.namu.wiki/w/%EC%9D%B4%EC%82%AC" target="_blank">나무위키 - 이사</a>: 이사에 대한 일반적인 정의와 절차, 상식 등.</li>
+      <li><a href="https://www.ftc.go.kr/www/main.do" target="_blank">공정거래위원회</a>: 이사 서비스 관련 소비자 보호 규정 및 표준 약관 확인.</li>
+      <li><a href="https://www.molit.go.kr/index.do" target="_blank">국토교통부</a>: 이사화물 운송 주선업 허가 관련 정보.</li>
+      <li><a href="https://www.kostat.go.kr/index.do" target="_blank">통계청</a>: 인구 이동 통계 및 주택 관련 자료.</li>
+      <li><a href="https://www.consumer.go.kr/main/index.do" target="_blank">한국소비자원</a>: 이사 관련 소비자 피해 사례 및 구제 방법.</li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>&copy; 2026 전국 이사무료견적 비교 플랫폼. All rights reserved. | 대표: 홍길동 | 사업자등록번호: 123-45-67890</p>
+    <p><a href="#privacy">개인정보처리방침</a> | <a href="#terms">이용약관</a></p>
+  </footer>
+
+  
